create appointment fixed